--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             app:tabBackground="@drawable/tab_color_selector"
             app:tabIndicatorColor="#664545"
+            app:tabTextColor="#FFFFFF"
             app:tabGravity="fill"
             />
 
