--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -128,7 +128,7 @@
 
                                 android:layout_weight=".30"
                                 android:text="000 TK"
-                                android:textColor="#961C1E"
+                                android:textColor="@color/mall_bd_theme_color"
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
 
@@ -158,7 +158,7 @@
 
                                 android:layout_weight=".98"
                                 android:text="000 TK"
-                                android:textColor="#961C1E"
+                                android:textColor="@color/mall_bd_theme_color"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
                             </LinearLayout>
@@ -180,7 +180,7 @@
                             android:layout_marginBottom="5dp"
                             android:text="@string/quantity"
                             android:textAllCaps="true"
-                            android:textColor="#961C1E"
+                            android:textColor="@color/mall_bd_theme_color"
                             android:textSize="@dimen/material_text_subhead"
                             android:id="@+id/quantity_plain_textview"/>
 
@@ -222,6 +222,25 @@
                         android:textSize="16sp"
                         android:id="@+id/out_of_stock_text_view"/>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1"
+                        android:layout_marginBottom="5dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Brand:"
+                            android:layout_marginRight="5dp"
+                            android:textColor="@color/color_black"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/mall_bd_theme_color"
+                            android:id="@+id/product_brand_text_view"
+                            />
+                    </LinearLayout>
                     <RatingBar
                         android:id="@+id/mallBdRatingBar"
                         style="?android:attr/ratingBarStyleSmall"
@@ -237,7 +256,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/description"
                         android:textAllCaps="true"
-                        android:textColor="#961C1E"
+                        android:textColor="@color/mall_bd_theme_color"
                         android:textSize="@dimen/material_text_subhead" />
 
                     <TextView
