--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -8,7 +8,8 @@
             android:id="@+id/nav_login_id"
             android:checked="false"
             android:icon="@drawable/nd_my_mallbd"
-            android:title="Login" />
+            android:title="Login"
+           />
 
         <item
             android:id="@+id/nav_home_id"
