--- a/app/src/main/res/layout/activity_order_history_details_page.xml
+++ b/app/src/main/res/layout/activity_order_history_details_page.xml
@@ -143,7 +143,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".7"
-                android:text="Special Discount:"
+                android:text="On Purchase Discount:"
                 android:gravity="right"
                 android:layout_marginRight="8dp"
                 android:textSize="15sp"/>
@@ -169,7 +169,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".7"
-                android:text="Employee Discount:"
+                android:text="MallBD Discount:"
                 android:gravity="right"
                 android:layout_marginRight="8dp"
                 android:textSize="15sp"/>
